[gd_scene load_steps=3 format=3 uid="uid://dl2yc2ofs3qmo"]

[ext_resource type="Script" path="res://scripts/leaderboard.gd" id="1_jddbr"]
[ext_resource type="Texture2D" uid="uid://csjwysgwy0dmb" path="res://assets/textures/arrow_rotate.png" id="2_ygmg5"]

[node name="Leaderboard" type="CanvasLayer"]
script = ExtResource("1_jddbr")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 400.0
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="TopLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 32
text = "Leaderboard"
horizontal_alignment = 1

[node name="TextureButton" type="TextureButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_ygmg5")
texture_pressed = ExtResource("2_ygmg5")
texture_hover = ExtResource("2_ygmg5")
ignore_texture_size = true
stretch_mode = 4

[node name="TabBar" type="TabBar" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
tab_count = 5
tab_alignment = 1
clip_tabs = false
tab_0/title = "All time"
tab_1/title = "30D"
tab_2/title = "7D"
tab_3/title = "3D"
tab_4/title = "1D"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScoresContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="tab_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TabBar" to="." method="_on_tab_bar_tab_changed"]
